<resources>
    // App name
    <string name="app_name">Shopping list</string>

    // Data base
    <string name="failed_insert">Не удалось выполнить insert</string>
    <string name="failed_getAll">Не удалось выполнить getAll</string>
    <string name="failed_getById">Не удалось выполнить getById</string>
    <string name="failed_update">Не удалось выполнить update</string>
    <string name="failed_delete">Не удалось выполнить delete</string>

    // Bottom Navigation
    <string name="lists">Списки</string>
    <string name="shopping_list">Список покупок</string>
    <string name="categories">Категории</string>
    <string name="purchase">Покупки</string>
    <string name="more">Еще</string>

    // Parent fragment
    <string name="select_categories">Выберите категории</string>
    <string name="home">Home</string>
    <string name="list_name">Название списка</string>
    <string name="select_the_time">Выберете дату</string>
    <string name="indicate_the_price">Укажите цену</string>
    <string name="indicate_the_name">Укажите название товара</string>
    <string name="save">Сохранить</string>
    <string name="name_of_category">Название категории</string>
    <string name="product_name">Название товара</string>
    <string name="price">Цена</string>
    <string name="unit">Измерение</string>
    <string name="quantity">Кол-во</string>
    <string name="universal_category">Универсальная категория</string>
    <string name="name">Название</string>
    <string name="time">Время</string>
    <string name="category">Категория</string>
    <string name="symbol_menu" translatable="false">&#8942;</string>
    <string name="pattern_price_hint" translatable="false">"-/—"</string>

    // Validation
    <string name="unknown_error_message">Произошла ошибка</string>
    <string name="email_incorrect">Введен некорректный почтовый адрес</string>
    <string name="email_validation_incorrect">Почтовый адрес должен содержать символы \"@\" и \".\"</string>
    <string name="name_incorrect">Неверное имя</string>
    <string name="message_is_empty">Сообщение пустое</string>
    <string name="connection">Соединение…</string>
    <string name="loading">Загрузка…</string>

    // inside a preferences
    <string name="handling">Обращение</string>
    <string name="sender">Отправитель</string>
    <string name="recipient">Получатель</string>
    <string name="name_hint">Имя</string>
    <string name="title_hint">Заголовок</string>
    <string name="email_hint">E-mail</string>
    <string name="send">Отправить</string>
    <string name="text_handling">Текст обращения: </string>
    <string name="language_already_selected">Язык уже выбран</string>
    <string name="handling_error">Не удалось загрузить обращение</string>

    // More fragment
    <string name="preferences">Настройки</string>
    <string name="send_handling">Написать письмо</string>
    <string name="notifications">Уведомления</string>
    <string name="themes">Темы</string>
    <string name="remove_ads">Убрать рекламу</string>

    // Language
    <string name="selected_language">Выбран язык : %1$s</string>
    <string name="select_language">Выберите язык</string>
    <string name="language">Язык</string>
    <string name="english">Английский</string>
    <string name="russian">Русский</string>

    // Connection
    <string name="server_unavailable">Cервер недоступен</string>
    <string name="please_try_again_later">Пожалуйста повторите попытку позже</string>
    <string name="no_internet_connection">Отсутствует интернет соединение</string>
    <string name="check_connection_internet">Проверте наличие интернет</string>

    // Error
    <string name="error_idTypeIndex_in_purchase_activity" translatable="false">" Error in ListOfPurchaseActivity absent idTypeIndex "</string>
    <string name="error_parentId_in_purchase_activity" translatable="false">" Error in ListOfPurchaseActivity absent parentId "</string>
    <string name="error_id_in_editor_purchase_activity" translatable="false">" Error in EditorPurchaseActivity.getIntent absent Id "</string>
    <string name="error_id_in_creator_purchase_activity" translatable="false">" Error in CreatorPurchaseActivity.getIntent absent listId "</string>
    <string name="error_id_in_editor_shopplist_activity" translatable="false">"Error in EditorShoppingListActivity.getIntent absent Id "</string>
    <string name="error_id_in_editor_category_activity" translatable="false">"Error in EditorCategoryActivity.getIntent absent Id"</string>
    <string name="error_insert_in_purchase_service" translatable="false">"Failed to execute insert"</string>

    // universal
    <string name="composite_of_two" translatable="false">"%1$s %2$s"</string>
    <string name="composite_of_three_with_brackets" translatable="false">"%1$s %2$s (%3$s")</string>
    <string name="composite_of_three_with_brackets_and_cost_of_one" translatable="false">
        %1$s %2$s \n(%3$s x %4$s)</string>


    <string-array name="months">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string-array name="units">
        <item>штук</item>
        <item>литр</item>
        <item>мл</item>
        <item>кг</item>
        <item>грамм</item>
        <item>мг</item>
        <item>метр</item>
        <item>дм</item>
        <item>км</item>
        <item>мм</item>
        <item>см</item>
    </string-array>

    <string-array name="language">
        <item>English</item>
        <item>Русский</item>
        <!--        <item>Белорусский</item>-->
        <!--        <item>Казахсткий</item>-->
    </string-array>

</resources>
