<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vmPurchase"
            type="com.persAssistant.shopping_list.presentation.activity.purchase.PurchaseViewModel" />
    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:text="Единицы" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/et_name_purchaseList"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/indicate_the_name"
            android:layout_height="wrap_content"
            android:text="@={vmPurchase.name}"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="шт, ml, kg"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:text="@string/number"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <!-- // decoro (Input Mask)
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberTIL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:nextFocusDown="@+id/fragment_order_call_unauthorized_your_name"
                app:errorEnabled="true"
                >
                <com.persAssistant.shopping_list.presentation.custom.PhoneNumberEditText
                    android:id="@+id/phoneNumberET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:maxLength="26"
                    android:inputType="phone"
                    android:maxLines="1"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            -->

            <EditText
                android:id="@+id/et_purchase_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="start"
                android:inputType="numberDecimal"
                android:hint="@string/indicate_the_price"
                android:text="@={vmPurchase.price}"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:hint="1"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_selection_of_categories_for_purchases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="30dp"
                android:text="@string/categories" />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/et_choose_category_in_the_purchase"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:paddingStart="16dp"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:hint="@string/select_categories"
                android:text="@={vmPurchase.categoryName}">

            </TextView>

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_save_shoppingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:textColor="@android:color/white"
        android:onClick="@{view -> vmPurchase.save()}"
        android:text="@string/save"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lotti_activity_category"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/no_signal"
        />

</LinearLayout>
</layout>