<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vmPurchase"
            type="com.persAssistant.shopping_list.feature.purchase.view_model.PurchaseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/fragment_purchase_appBar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/fragment_purchase_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/splash_background_color"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_back_ios_new"
                app:title="@string/purchase"
                app:titleCentered="true"
                app:titleTextColor="@color/text_black" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/fragment_purchase_name_and_unit_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_purchase_appBar_layout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_purchase_name_product_til"
                style="@style/CreateEditProductModuleLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                app:endIconMode="clear_text"
                app:errorIconDrawable="@null">

                <AutoCompleteTextView
                    android:id="@+id/fragment_purchase_name_product_text"
                    style="@style/CreateEditProductModuleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/product_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:nextFocusRight="@id/fragment_purchase_unit_til"
                    android:text="@={vmPurchase.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_purchase_unit_til"
                style="@style/CreateEditProductModuleLayoutExposedDropdown"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:endIconDrawable="@drawable/ic_arrow_drop_down_24"
                app:errorIconDrawable="@null">

                <AutoCompleteTextView
                    android:id="@+id/fragment_purchase_unit_text"
                    style="@style/CreateEditProductModuleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/unit"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:nextFocusRight="@id/fragment_purchase_price_product_til"
                    tools:ignore="LabelFor" />
<!--                android:text="@={vmPurchase.unit}"-->

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_purchase_price_and_number_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_purchase_name_and_unit_ll"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_purchase_price_product_til"
                style="@style/CreateEditProductModuleLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                app:endIconMode="clear_text"
                app:errorIconDrawable="@null">

                <AutoCompleteTextView
                    android:id="@+id/fragment_purchase_price_product_text"
                    style="@style/CreateEditProductModuleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:nextFocusRight="@id/fragment_purchase_number_til"
                    android:text="@={vmPurchase.price}"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_purchase_number_til"
                style="@style/CreateEditProductModuleLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:endIconMode="clear_text"
                app:errorIconDrawable="@null">

                <AutoCompleteTextView
                    android:id="@+id/fragment_purchase_number_text"
                    style="@style/CreateEditProductModuleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:text="@={vmPurchase.quantity}"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_purchase_categories_til"
            style="@style/CreateEditProductModuleLayoutExposedDropdown"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:endIconDrawable="@drawable/ic_arrow_down"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_purchase_price_and_number_ll">

            <AutoCompleteTextView
                android:id="@+id/fragment_purchase_categories_text"
                style="@style/CreateEditProductModuleTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/select_categories"
                android:imeOptions="actionNext"
                android:inputType="none"
                android:maxLines="1" />
<!--            android:text="@={vmPurchase.categoryName}"-->

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/fragment_purchase_button_save_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:backgroundTint="#4CAF50"
            android:text="@string/save"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fragment_purchase_categories_til"
            app:layout_constraintTop_toBottomOf="@+id/fragment_purchase_categories_til" />
<!--        android:onClick="@{view -> vmPurchase.save()}"-->

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/fragment_purchase_lotti"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_purchase_button_save_purchase"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/no_signal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
